# synthesis

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  agent.json  agent_log.json  conftest.py  docker-compose.yml  marketplace_config.json  pyproject.toml  pytest.ini  requirements.txt
.claude/: AGENTS.md  CONTEXT.md  WHY_THIS_IS_THE_BEST.md
.github/workflows/: ci.yml  deploy.yml
agents/: README.md
agents/nexus/: brain.py  erc8183_identity.py  identity.py  main.py  openserv_build_story.md  treasury.py  wallet.py
circuits/api_proof/: Nargo.toml
circuits/balance_proof/: Nargo.toml
circuits/identity_proof/: Nargo.toml
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol  DeployAll.s.sol  DeployCelo.s.sol  DeployStatus.s.sol
contracts/src/: AgentEscrow.sol  AgentIdentity.sol  AgentTreasury.sol  NexusArbiter.sol  NexusComputeCredit.sol  NexusPublicGoodsVault.sol  (+3 more)
docs/: architecture.md  eigencompute-architecture.md
mcp/: __init__.py  x402_middleware.py
scripts/: celo_payment_demo.py  check_env.py  health_server.py  moonpay_dca_demo.py  register_openclaw.sh  setup_marketplace.py  setup_olas.sh  setup_safe.sh  submit_all_tracks.py  superrare_mint.py  verify_deployment.py
skills/: coordinate.skill.md  goods.skill.md  identity.skill.md  lido.skill.md  nexus.skill.md  secrets.skill.md  storage.skill.md  trade.skill.md  treasury.skill.md
tests/: test_brain.py  test_identity.py  test_sub_agents.py  test_treasury.py
web/: next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+68 files in other folders)
