[project]
name = "nexus"
version = "1.0.0"
description = "Nexus — autonomous agent for Synthesis Hackathon 2026"
requires-python = ">=3.12"

[project.dependencies]
groq = ">=0.11.0"
fastapi = ">=0.115.0"
uvicorn = ">=0.30.0"
mcp = ">=1.0.0"
web3 = ">=7.0.0"
eth-account = ">=0.13.0"
httpx = ">=0.27.0"
pydantic = ">=2.0.0"
python-dotenv = ">=1.0.0"
python-telegram-bot = ">=21.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
